--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-    <div id="app"></div>                
+    <div id="app">
+        <div id="text"></div>
+    </div>                
 </body>
 </html>
 
